# SIMQ

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build_arm.sh  build_docker.sh  build_sources.sh  exec_docker.sh  generate_cfiles.sh  remove_docker.sh  run_benchmark.sh  run_docker.sh  run_evaluation.sh  ubuntu.Dockerfile
evaluation_scripts/: benchmark_query_1_1_damon2020_intel_xeon.py
generators/: create_simq.py
generators/simd/: __init__.py
generators/simq/build_variants/buffer/: buffer.py
generators/simq/build_variants/mask_broadcast/: mask_boradcast.py
generators/simq/build_variants/set/: set.py
generators/simq/general/: general.py  license.py  simq_vector_view.py
generators/simq/vector/: types.py
generators/simq/vector/arm/: instructions.py
generators/simq/vector/intel/: instructions.py
include/data/: column.h
include/data/container/: column_array.h
include/engine/operators/bitmask_candidates/sequential/: aggregate_bitmask_candidates.h  filter_bitmask_candidates.h
include/engine/operators/bitmask_candidates/simq/: aggregate_bitmask_candidates.h  filter_bitmask_candidates.h
include/engine/operators/core/aggregate/: aggregate_max_core.h  aggregate_min_core.h  aggregate_sum_core.h
include/engine/operators/core/filter/: point_filter_comparator_core.h
include/simd/: intrin.h
include/simd/instructions/arm/neon/: bitwise_neon.h  compare_neon.h  create_neon.h  io_neon.h  math_neon.h  misc_neon.h
include/simd/instructions/declarations/: bitwise.h  compare.h  create.h  io.h  math.h  misc.h
include/simd/types/: simd.h
include/simd/types/arm/: neon.h
include/simd/types/intel/: avx2.h  avx512.h  sse.h
include/simd/utils/: memory.h  print.h
include/simq/control/bitmask/: complex_bitmask.h  complex_bitmask_save.h
include/simq/control/vector_builder/: vector_builder.h  vector_view.h  vector_view_impl.h
include/utils/: clock.h  cpu_freq_monitor.h  definitions.h  helper.h  preprocessor.h  random.h
src/: CMakeLists.txt
src/benchmarks/: CMakeLists.txt
src/benchmarks/microbenchmarks/build_variants/: CMakeLists.txt
src/benchmarks/microbenchmarks/build_variants/intel/: CMakeLists.txt
src/benchmarks/microbenchmarks/build_variants/intel/knl/: CMakeLists.txt  mb_xeon_phi_knl_build_variants.cpp
src/benchmarks/microbenchmarks/build_variants/intel/xeon/: CMakeLists.txt  mb_intel_xeon_build_variants.cpp
src/benchmarks/queries/: CMakeLists.txt
src/benchmarks/queries/data/: measurement_helper.h
src/benchmarks/queries/q11/: query11_data.h  query11_scalar.h  query11_seq.h  query11_seq_parallel.h  query11_seq_parallel_tput.h  query11_simq.h  query11_simq_parallel.h  query11_simq_parallel_tput.h
src/benchmarks/queries/q11/intel/knl/: CMakeLists.txt  query_intel_knl_q11_damon.cpp
src/benchmarks/queries/q11/intel/xeon/: CMakeLists.txt  query_intel_xeon_q11_damon.cpp  query_intel_xeon_q11_damon_talk.cpp  query_intel_xeon_q11_mt_qtp_vldb.cpp  query_intel_xeon_q11_st_vs_mt_vldb.cpp  query_intel_xeon_q11_vldb.cpp
src/benchmarks/queries/q12/: CMakeLists.txt  query12_data.h  query12_seq.h  query12_seq_parallel.h  query12_seq_parallel_tput.h  query12_simq.h  query12_simq_parallel_tput.h
src/benchmarks/queries/q12/intel/xeon/: CMakeLists.txt  ERROR_query_intel_xeon_q12_vldb2.cpp  query_intel_xeon_q11_vldb.cpp  query_intel_xeon_q12_vldb.cpp
src/benchmarks/workloads/: CMakeLists.txt
src/benchmarks/workloads/vldbj/: CMakeLists.txt
src/benchmarks/workloads/vldbj/arm/: CMakeLists.txt  workload_vldbj.cpp
src/benchmarks/workloads/vldbj/intel/: CMakeLists.txt
src/benchmarks/workloads/vldbj/intel/knl/: CMakeLists.txt  workload_vldbj.cpp
src/benchmarks/workloads/vldbj/intel/xeon/: CMakeLists.txt  workload_vldbj.cpp
test/: CMakeLists.txt
test/engine/: CMakeLists.txt
test/engine/operators/: CMakeLists.txt
test/engine/operators/bitmask_candidates/: CMakeLists.txt
test/engine/operators/bitmask_candidates/sequential/aggregate/: CMakeLists.txt
test/engine/operators/bitmask_candidates/sequential/aggregate/intel/xeon/: CMakeLists.txt  test_intel_xeon_bmc_sequential_aggregate_avx2.cpp  test_intel_xeon_bmc_sequential_aggregate_avx512.cpp  test_intel_xeon_bmc_sequential_aggregate_sse.cpp
test/engine/operators/bitmask_candidates/sequential/filter/intel/: CMakeLists.txt
test/engine/operators/bitmask_candidates/sequential/filter/intel/xeon/: CMakeLists.txt  test_intel_xeon_bmc_sequential_filter_avx2.cpp  test_intel_xeon_bmc_sequential_filter_avx512.cpp  test_intel_xeon_bmc_sequential_filter_sse.cpp
test/engine/operators/bitmask_candidates/simq/: CMakeLists.txt
test/engine/operators/bitmask_candidates/simq/aggregate/intel/xeon/: CMakeLists.txt  test_intel_xeon_bmc_simq_aggregate_avx2.cpp  test_intel_xeon_bmc_simq_aggregate_avx512.cpp  test_intel_xeon_bmc_simq_aggregate_sse.cpp
test/engine/operators/bitmask_candidates/simq/filter/intel/xeon/: CMakeLists.txt  test_intel_xeon_bmc_simq_filter_avx2.cpp  test_intel_xeon_bmc_simq_filter_avx512.cpp  test_intel_xeon_bmc_simq_filter_sse.cpp
test/simq/control/: CMakeLists.txt
test/simq/control/vector_builder/build_variants/: CMakeLists.txt
test/simq/control/vector_builder/build_variants/buffer/intel/xeon/: CMakeLists.txt  test_intel_xeon_vector_build_buffer_avx2.cpp  test_intel_xeon_vector_build_buffer_avx512.cpp  test_intel_xeon_vector_build_buffer_sse.cpp
test/simq/control/vector_builder/build_variants/gather/intel/xeon/: CMakeLists.txt  test_intel_xeon_vector_build_gather_avx2.cpp  test_intel_xeon_vector_build_gather_avx512.cpp  test_intel_xeon_vector_build_gather_sse.cpp
test/simq/control/vector_builder/build_variants/mask_broadcast/intel/xeon/: CMakeLists.txt  test_intel_xeon_vector_build_mask_broadcast_avx2.cpp  test_intel_xeon_vector_build_mask_broadcast_avx512.cpp  test_intel_xeon_vector_build_mask_broadcast_sse.cpp
test/simq/control/vector_builder/build_variants/set/intel/xeon/: CMakeLists.txt  test_intel_xeon_vector_build_set_avx2.cpp  test_intel_xeon_vector_build_set_avx512.cpp  test_intel_xeon_vector_build_set_sse.cpp
(+22 files in other folders)
