function(create_test test_name test_file)
    string(REPLACE ";" " " TMP_COMPILE_OPTIONS "${TEST_COMPILE_OPTIONS}")
    set(TEST_COMPILE_FLAGS "COMPILE_OPTIONS=\"${TMP_COMPILE_OPTIONS}\"")
    string(REPLACE ";" " " TMP_COMPILE_DEFINITIONS "${TEST_COMPILE_DEFINITIONS}")
    list(APPEND TEST_COMPILE_FLAGS "COMPILE_DEFINITIONS=\"${TMP_COMPILE_DEFINITIONS}\"")
    add_executable("${test_name}_bin" "${test_file}")
    target_compile_options("${test_name}_bin" PRIVATE "${GENERAL_COMPILE_OPTIONS};${GENERAL_COMPILE_WARNINGS_DEFINITIONS};${TEST_COMPILE_OPTIONS}")
    target_compile_definitions("${test_name}_bin" PRIVATE "${GENERAL_COMPILE_DEFINITIONS};${TEST_COMPILE_DEFINITIONS};${TEST_COMPILE_FLAGS}")
    target_link_libraries("${test_name}_bin" PRIVATE "${GENERAL_LINK_OPTIONS}")
    add_test("${test_name}" "${test_name}_bin")
    if(DEFINED CMAKE_INSTALL_TEST_PATH)
        install(TARGETS "${test_name}_bin" DESTINATION ${CMAKE_INSTALL_TEST_PATH})
    endif()
endfunction()

add_subdirectory(simq)
add_subdirectory(engine)